# bazaar-of-fates

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  astrology.md  bazi.md  iching.md  jyotish.md  liuren.md  qimen.md  qizheng.md  suimei.md  taiyi.md  tieban.md  ziwei.md
fortune/: annual.py  astro_ext.py  birth.py  group.py  interpret.py  schemas.py  synastry.py  timeline.py  ziwei_ext.py
fortune/api/: main.py
fortune/casting/: __init__.py  astrology.py  bazi.py  iching.py  jyotish.py  liuren.py  qimen.py  qizheng.py  suimei.py  taiyi.py  tieban.py  ziwei.py
fortune/engines/astrology/: astro.py
fortune/engines/bazi/: bazi.py
fortune/engines/iching/: iching.py
fortune/engines/jyotish/: jyotish.py
fortune/engines/liuren/: liuren.py
fortune/engines/qimen/: qimen.py
fortune/engines/qizheng/: qizheng.py
fortune/engines/suimei/: suimei.py
fortune/engines/taiyi/: taiyi.py
fortune/shared/: config.py  llm.py  logging.py
prompts/astrology/: astro_author.md
prompts/bazi/: bazi_author.md
prompts/iching/: meihua_author.md
prompts/jyotish/: jyotish_author.md
prompts/liuren/: liuren_author.md
prompts/qimen/: qimen_author.md
prompts/qizheng/: qizheng_author.md
prompts/suimei/: suimei_author.md
prompts/taiyi/: taiyi_author.md
prompts/tieban/: tieban_author.md
prompts/ziwei/: ziwei_author.md
scripts/: screenshots.py  sync_from_main.sh
tests/: test_smoke.py
web/: index.html  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
(+14 files in other folders)
